Pseudo element before no longer overflow review element and don't obscure the text. position property must be always specified for z-index to work

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -389,9 +389,12 @@
   padding: 3rem;
   margin-bottom: 3.5rem;
   position: relative;
+  overflow: hidden;
   
   &__text {
     margin-bottom: 2rem;
+    z-index: 10;
+    position: relative;
   }
   
   &__user {
@@ -437,5 +440,6 @@
     font-size: 20rem;
     color: var(--color-grey-light-2);
     font-family: sans-serif;
+    z-index: 1;
   }
 }
